--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -55,6 +55,20 @@
       max-width: 170px;
     }
 
+    .tb-mw-100 {
+      // min-width: 150px;
+      width: auto;
+      max-width: 170px;
+    }
+
+    .tb-w-max-100 {
+      width: auto;
+      max-width: 180px;
+      overflow: auto;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
     .tb-w-max {
       width: auto;
       max-width: 180px;
