user table updated

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -102,12 +102,9 @@ p {
   font-size: 12px;
 }
 
-.fs-20 {
-  font-size: 20px;
-}
 
-.fs-40 {
-  font-size: 40px;
+.fs-14 {
+  font-size: 14px;
 }
 
 .fs-16 {
@@ -118,8 +115,36 @@ p {
   font-size: 18px;
 }
 
-.fs-14 {
-  font-size: 14px;
+
+.fs-20 {
+  font-size: 20px;
+}
+
+.fs-22 {
+  font-size: 22px !important;
+}
+
+.fs-24 {
+  font-size: 24px !important;
+}
+
+.fs-26 {
+  font-size: 26px !important;
+}
+
+.fs-28 {
+  font-size: 28px !important;
+}
+
+.fs-30 {
+  font-size: 30px !important;
+}
+.fs-35 {
+  font-size: 35px !important;
+}
+
+.fs-40 {
+  font-size: 40px;
 }
 
 .tx-d {
@@ -261,6 +286,34 @@ pre {
 
 .w-250 {
   width: 250px;
+}
+
+.w-30{
+  width: 30% !important;
+}
+
+.w-40{
+  width: 40% !important;
+}
+
+.w-50{
+  width: 50% !important;
+}
+
+.w-60{
+  width: 60% !important;
+}
+
+.w-70{
+  width: 70% !important;
+}
+
+.w-80{
+  width: 80% !important;
+}
+
+.w-90{
+  width: 90% !important;
 }
 
 .w-100px {
